@@ -1533,7 +1533,7 @@ class Routines:
                     value = pkadic[key]
                     del pkadic[key]
                     if ph >= value:
-                        if string.lower(ff) in ["amber","charmm","tyl06","peoepb"]:
+                        if string.lower(ff) in ["amber","charmm","tyl06","peoepb","swanson"]:
                             warn = ("N-terminal %s" % key, "neutral")
                             warnings.append(warn)
                         else:
@@ -1546,7 +1546,7 @@ class Routines:
                     value = pkadic[key]
                     del pkadic[key]
                     if ph < value:
-                        if string.lower(ff) in ["amber","charmm", "tyl06","peoepb"]:
+                        if string.lower(ff) in ["amber","charmm", "tyl06","peoepb","swanson"]:
                             warn = ("C-terminal %s" % key, "neutral")
                             warnings.append(warn)
                         else:
@@ -1564,10 +1564,10 @@ class Routines:
                         warn = (key, "neutral")
                         warnings.append(warn)
                 elif resname == "ASP" and ph < value:
-                    if residue.isCterm and string.lower(ff) in ["amber","tyl06"]:
+                    if residue.isCterm and string.lower(ff) in ["amber","tyl06","swanson"]:
                         warn = (key, "Protonated at C-Terminal")
                         warnings.append(warn)
-                    elif residue.isNterm and string.lower(ff) in ["amber","tyl06"]:
+                    elif residue.isNterm and string.lower(ff) in ["amber","tyl06","swanson"]:
                         warn = (key, "Protonated at N-Terminal")
                         warnings.append(warn)
                     else:
@@ -1579,10 +1579,10 @@ class Routines:
                     else:
                         self.applyPatch("CYM", residue)
                 elif resname == "GLU" and ph < value:
-                    if residue.isCterm and string.lower(ff) in ["amber","tyl06"]:
+                    if residue.isCterm and string.lower(ff) in ["amber","tyl06","swanson"]:
                         warn = (key, "Protonated at C-Terminal")
                         warnings.append(warn)
-                    elif residue.isNterm and string.lower(ff) in ["amber","tyl06"]:
+                    elif residue.isNterm and string.lower(ff) in ["amber","tyl06","swanson"]:
                         warn = (key, "Protonated at N-Terminal")
                         warnings.append(warn)
                     else:
@@ -1593,7 +1593,7 @@ class Routines:
                     if string.lower(ff) == "charmm":
                         warn = (key, "neutral")
                         warnings.append(warn)
-                    elif string.lower(ff) in ["amber","tyl06"] and residue.get("isCterm"):
+                    elif string.lower(ff) in ["amber","tyl06","swanson"] and residue.get("isCterm"):
                         warn = (key, "neutral at C-Terminal")
                         warnings.append(warn)
                     elif string.lower(ff) == "tyl06" and residue.get("isNterm"):
@@ -1602,7 +1602,7 @@ class Routines:
                     else:
                         self.applyPatch("LYN", residue)
                 elif resname == "TYR" and ph >= value:
-                    if string.lower(ff) in ["charmm", "amber", "tyl06","peoepb"]:
+                    if string.lower(ff) in ["charmm", "amber", "tyl06","peoepb","swanson"]:
                         warn = (key, "negative")
                         warnings.append(warn)
                     else:
